docs: Clarify EventPoint properties

- pointId is the point ID, obviously.
- Users should not set the accepted flag in QML.  It's not possible to
  make this mechanism useful in Qt 6.  In Qt 5, there's no
  pressed(EventPoint) signal; setting it in onTapped() doesn't have the
  desired effect; and setting it procedurally in any context is an ugly
  MouseArea hack that we'd better avoid repeating.  It was already
  marked readonly, but the docs mistakenly suggested that it should be
  settable.  The Q_PROPERTY is writable, but probably shouldn't be.

Amends a4439d6baf6996fd018575f5ed752b4d4429f92a

Fixes: QTBUG-94016
Pick-to: 5.12
Change-Id: I9ee23e8fd4d4417638c520425882b83c26588526
Reviewed-by: Paul Wicking <paul.wicking@qt.io>